--- a/StudentProject/src/main/resources/application.properties
+++ b/StudentProject/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl-auto=update
