--- a/StudentProject/src/main/resources/application.properties
+++ b/StudentProject/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
 spring.jpa.generate-ddl-auto=update
